<resources>
    <string name="app_name">BTrade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">wELCOME TO THE WALLET FRIENDLY STATION</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="description_hint">Description</string>
    <string-array name="category">
        <item>household</item>
        <item>furniture</item>
        <item>service</item>
        <item>electronics</item>
        <item>textbooks</item>
    </string-array>
    <string name="name">Name</string>
    <string name="show_note">Show Note</string>
    <string name="add">Add</string>
    <string name="textview">TextView</string>
    <string name="proceed">Proceed</string>
    <string name="newer">New</string>
    <string name="switch1">Switch</string>
    <string name="profile">Profile</string>
    <string name="logout_sm">Logout</string>
    <string name="login_sm">Login</string>
    <string name="product_name">Product Name</string>
    <string name="value">Value</string>
    <string name="condition">Condition</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="empty">Empty</string>
    <string name="click_below_to_add_an_item">Click below to add an item</string>
    <string name="form_4_book">Form 4 book</string>
    <string name="was_lastly_used_this_year_covered_with_few_writing">Was lastly used this year,covered with few writing</string>
    <string name="category_image">Category Image</string>
    <string name="category">Category</string>
    <string name="categories">categories</string>
    <string name="furniture">FURNITURE</string>
    <string name="wxpand">wxpand</string>
    <string name="add_product">Add Product</string>
    <string name="pick_category">Pick Category</string>
    <string name="textbooks">TEXTBOOKS</string>
    <string name="service">SERVICE</string>
    <string name="household">HOUSEHOLD</string>
    <string name="check_out">Check Out</string>
    <string name="vehicles">Vehicles</string>
    <string name="machine">machine</string>
    <string name="fashion">fashion</string>
    <string name="repair">repair</string>
    <string name="electronics">Electronics</string>
    <string name="bid">bid</string>

</resources>