<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightwhite"
    tools:context=".activities.AllCategory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/ic_baseline_search_24" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/categories"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/catFurniture"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/blue"
                android:clickable="true"
                android:focusable="true">


                <Button
                    android:id="@+id/btnFurniture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="16dp"
                    android:background="#00000000"
                    android:clickable="true"
                    android:padding="20dp"
                    android:text="@string/check_out"
                    android:textColor="#C0CA33"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="79dp"
                    android:fontFamily="@font/signatureblack"
                    android:padding="25dp"
                    android:text="@string/furniture"
                    android:textColor="@color/purple_200"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="126dp"
                    android:layout_height="231dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/chair"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#000000"
            app:cardElevation="8dp">

            <RelativeLayout
                android:id="@+id/catBooks"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/book_categ_back"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/boook"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/signatureblack"
                    android:padding="25dp"
                    android:text="@string/textbooks"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnTextbooks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/check_out"
                    android:textColor="@color/white" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/catMachine"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/gard_green"
                android:clickable="true"
                android:focusable="true">


                <Button
                    android:id="@+id/btnMachine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/check_out"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/categ_btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:fontFamily="@font/signatureblack"
                    android:padding="25dp"
                    android:text="MACHINE"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/circleImageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginBottom="61dp"
                    android:src="@drawable/bicycle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/categ_btn3" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/catHousehold"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/book_categ_back"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/furn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/signatureblack"
                android:padding="25dp"
                android:text="Household"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnHousehold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/check_out"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/catServices"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/gard_green"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/laundry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/signatureblack"
                android:padding="25dp"
                android:text="@string/service"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/check_out"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/catElectronics"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/yellow"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/kettle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/signatureblack"
                android:padding="25dp"
                android:text="ELECTRONICS"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnElectronics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/check_out"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/gradient_back"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/plimbing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/signatureblack"
                android:padding="25dp"
                android:text="REPAIR"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnRepair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/check_out"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/gradient_back"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/bicycle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/signatureblack"
                android:padding="25dp"
                android:text="@string/vehicles"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnVehicles"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/check_out"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/book_categ_back"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/clothes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/signatureblack"
                android:padding="25dp"
                android:text="Fashion and Clothing"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnFashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/check_out"
                android:textColor="@color/white" />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>